linux (4.6.1-2) UNRELEASED; urgency=medium

  * bug script: Put binary package name and version in the info file so
    linux-signed can easily replace them
  * Move merge_packages function from debian/bin/gencontrol.py to
    gencontrol module

 -- Ben Hutchings <ben@decadent.org.uk>  Tue, 07 Jun 2016 19:37:55 +0100

linux (4.6.1-1) unstable; urgency=medium

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.6.1

  [ Ben Hutchings ]
  * [mips*r6*] Disable these architectures until dak recognises them as valid
    in the control file
  * linux-image: Rewrite maintainer scripts in shell, using the new
    linux-update-symlinks and linux-check-removal commands
    (Closes: #692333, #815850).  Drop support for minimal_swap, no_symlinks,
    use_hard_links and *_hook parameters in  /etc/kernel-img.conf
    (Closes: #730073).  Remove now-redundant debconf templates.
  * linux-image: postrm: Update default symlinks before running hook scripts
  * linux-image: Make a newly installed kernel the default if the package
    was previously removed
  * mtd: Disable slram and phram when securelevel is enabled
  * debian/patches/features/all/rt/genpatch.py: Use Python 3
  * debian/patches/features/all/rt/genpatch.py: Fix mapping of -rt version to
    upstream version
  * debian/patches/features/all/rt/genpatch.py: Use upstream tarball directly
  * debian/patches/features/all/rt/genpatch.py: Use stable URLs in patch Origin
    headers
  * [rt] Update to 4.6.1-rt3:
    - trace: correct off by one while recording the trace-event
    - sched,preempt: Fix preempt_count manipulations
    - kernel/rtmutex: only warn once on a try lock from bad
    - locallock: add local_lock_on()
    - kernel/printk: Don't try to print from IRQ/NMI region
    - mm: perform lru_add_drain_all() remotely
  * debian/control: Drop obsolete versioned Depends and Breaks
  * linux-libc-dev: Drop obsolete Replaces/Conflicts with linux-kernel-headers