@@ -466,8 +466,10 @@ install-udeb_$(ARCH):
 	kernel-wedge install-files $(ABINAME)
 	kernel-wedge check $(PACKAGE_NAMES)
 	dh_fixperms
+ifeq ($(UDEB_UNSIGNED_TEST_BUILD),False)
 	dh_gencontrol
 	dh_builddeb
+endif
 
 install-source: PACKAGE_NAME = $(SOURCE_PACKAGE_NAME)-source-$(VERSION)
 install-source: DH_OPTIONS = -p$(PACKAGE_NAME)
